# chatbot

./: .gitignore  .readthedocs.yaml  README.md  cli.py  pyproject.toml  tox.ini
chatbot/: bot.py  settings.py
chatbot/modules/: debug.py  utility.py
chatbot/modules/chat/: bot.py  controller.py  helpers.py  models.py  session.py  settings.py  stream.py
chatbot/utils/: config.py  datetime.py  errors.py  search.py
chatbot/utils/discord/: color.py  embed.py  markdown.py  messageable.py  transform.py  typing.py  ui.py
docs/source/: conf.py  index.rst
dougbot3/: __init__.py  __main__.py  bot.py  commands.py  errors.py  settings.py
dougbot3/modules/: debug.py
dougbot3/modules/chat/: bot.py  commands.py  controller.py  helpers.py  models.py  session.py  settings.py
dougbot3/utils/: config.py  errors.py  logging.py  markdown.py
dougbot3/utils/discord/: __init__.py  checks.py  embed.py  file.py  markdown.py  messageable.py  pagination.py  transform.py  ui.py
