[tool.poetry]
name = "dougbot3"
version = "0.1.0"
description = ""
authors = ["Tony Wu <tonywu6@protonmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"
discord-py = "^2.2.2"
openai = "^0.27.2"
toml = "^0.10.2"
loguru = "^0.6.0"
click = "^8.1.3"
attrs = "^22.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-annotations = "^3.0.0"
flake8-bugbear = "^23.3.23"
flake8-docstrings = "^1.7.0"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.8.0"
flake8-todo = "^0.7"
flake8-isort = "^6.0.0"
pep8-naming = "^0.13.3"
pre-commit = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
case_sensitive = true
combine_as_imports = true
line_length = 88
atomic = true
include_trailing_comma=true
