[tool.poetry]
authors = ["Tony Wu <tonywu6@protonmail.com>"]
description = ""
license = "AGPL-3.0-or-later"
name = "chatbot"
readme = "README.md"
version = "0.1.1"

[tool.poetry.dependencies]
arrow = "^1.2.3"
attrs = "^22.2.0"
click = "^8.1.3"
discord-py = "^2.2.2"
emoji = "^2.2.0"
faker = "^18.4.0"
loguru = "^0.6.0"
markdown-it-py = "^2.2.0"
more-itertools = "^9.1.0"
openai = "^0.27.2"
orjson = "^3.8.9"
psutil = "^5.9.4"
pydantic = "^1.10.7"
python = "^3.11"
python-slugify = "^8.0.1"
pyyaml = "^6.0"
tiktoken = "^0.3.3"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.3.23"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.0.0"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.8.0"
flake8-todo = "^0.7"
pep8-naming = "^0.13.3"
pre-commit = "^3.2.1"
watchfiles = "^0.19.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
atomic = true
case_sensitive = true
combine_as_imports = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
