[project]
authors = [{name = "Tony Wu", email = "tonywu6@protonmail.com"}]
classifiers = [
  "Private :: Do Not Upload",
]
dependencies = [
  "arrow>=1.2.3",
  "attrs>=22.2.0",
  "click>=8.1.3",
  "discord-py>=2.2.2",
  "emoji>=2.2.0",
  "faker>=18.4.0",
  "loguru>=0.6.0",
  "markdown-it-py>=2.2.0",
  "more-itertools>=9.1.0",
  "openai>=0.27.2",
  "orjson>=3.8.9",
  "psutil>=5.9.4",
  "pydantic>=1.10.7, <2",
  "python-slugify>=8.0.1",
  "pyyaml>=6.0",
  "tiktoken>=0.3.3",
  "toml>=0.10.2",
]
name = "chatbot"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.1"

[project.scripts]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = [
  "black>=23.7.0",
  "ruff>=0.0.284",
  "pre-commit>=3.2.1",
  "watchfiles>=0.19.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
extend-exclude = """
_pb2\\.pyi?
| _pb2_grpc\\.pyi?
"""
line-length = 88
target-versions = ["py38", "py39", "py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "B", "I"]
src = ["pyprojects/*/src"]

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__"]
include = ["pyprojects/*/src"]
reportGeneralTypeIssues = "information"
reportOptionalMemberAccess = "information"
reportPrivateImportUsage = "information"
